bug fixes with updating status
