# payments/docs/swagger.yaml
@@ -1,15 +1,18 @@
-basePath: /
+basePath: /payment/
 definitions:
-  handler.createAccountRequest:
+  CreateAccountRequest:
     properties:
       balance:
+        example: 1000
         type: number
       full_name:
+        example: John Doe
         type: string
     type: object
-  handler.updateAccountRequest:
+  UpdateAccountRequest:
     properties:
       amount:
+        example: 100
         type: number
     type: object
   model.Account:
@@ -27,7 +30,31 @@ info:
   title: Payments
   version: "1.0"
 paths:
-  /account:
+  /account/create/{user_id}:
+    post:
+      description: создает аккаунта
+      parameters:
+      - description: ID пользователя
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Начальный счет аккаунта
+        in: body
+        name: balance
+        required: true
+        schema:
+          $ref: '#/definitions/CreateAccountRequest'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      tags:
+      - Accounts Manage
+  /account/get:
     get:
       description: Возвращает все счета
       produces:
@@ -40,8 +67,8 @@ paths:
               $ref: '#/definitions/model.Account'
             type: array
       tags:
-      - Аккаунты
-  /account/{user_id}:
+      - Accounts Info
+  /account/get/{user_id}:
     get:
       description: Получить счет по ID
       parameters:
@@ -62,31 +89,7 @@ paths:
           schema:
             type: string
       tags:
-      - Инфо
-  /account/create/{user_id}:
-    post:
-      description: создает аккаунта
-      parameters:
-      - description: ID пользователя
-        in: path
-        name: user_id
-        required: true
-        type: string
-      - description: Начальный счет аккаунта
-        in: body
-        name: balance
-        required: true
-        schema:
-          $ref: '#/definitions/handler.createAccountRequest'
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      tags:
-      - Аккаунты
+      - Accounts Info
   /account/update/{user_id}:
     patch:
       description: изменить баланс счета
@@ -101,7 +104,7 @@ paths:
         name: update_request
         required: true
         schema:
-          $ref: '#/definitions/handler.updateAccountRequest'
+          $ref: '#/definitions/UpdateAccountRequest'
       responses:
         "200":
           description: OK
@@ -110,5 +113,5 @@ paths:
         "500":
           description: Internal Server Error
       tags:
-      - Аккаунты
+      - Accounts Manage
 swagger: "2.0"
