# payments/handlers/get.go
@@ -8,10 +8,10 @@ import (
 
 // @Title Get all accounts
 // @Description Возвращает все счета
-// @Tags Аккаунты
+// @Tags Accounts Info
 // @Produce json
 // @Success 200 {array} model.Account
-// @Router  /account [get]
+// @Router  /account/get [get]
 func (h *Handler) AllAccounts(w http.ResponseWriter, r *http.Request) {
 	accounts, err := h.as.All()
 	if err != nil {
@@ -29,12 +29,12 @@ func (h *Handler) AllAccounts(w http.ResponseWriter, r *http.Request) {
 
 // @Title Get Account By ID
 // @Description Получить счет по ID
-// @Tags Инфо
+// @Tags Accounts Info
 // @Produce json
 // @Param   id  path  string  true  "ID пользователя"
 // @Success 200 {object} model.Account "Информация о счете"
 // @Failure 500 {string} string "Внутренняя ошибка сервера"
-// @Router /account/{user_id} [get]
+// @Router /account/get/{user_id} [get]
 func (h *Handler) GetAccount(w http.ResponseWriter, r *http.Request) {
 	id := mux.Vars(r)["user_id"]
 	account, err := h.as.Get(id)
@@ -47,5 +47,5 @@ func (h *Handler) GetAccount(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	w.WriteHeader(http.StatusOK)
+	//w.WriteHeader(http.StatusOK)
 }
