# payments/handlers/update.go
@@ -6,23 +6,22 @@ import (
 	"payments/pkg/json"
 )
 
-type updateAccountRequest struct {
-	Amount float64 `json:"amount"`
-	//Descr  string  `json:"descr"`
-}
+type updateReq struct {
+	Amount float64 `json:"amount" example:"100.00"`
+} //@name UpdateAccountRequest
 
 // @Title Update Account
 // @Description изменить баланс счета
-// @Tags Аккаунты
+// @Tags Accounts Manage
 // @Param   user_id  path  string  true  "ID пользователя"
-// @Param   update_request   body  updateAccountRequest true  "Изменение счета"
+// @Param   update_request   body  updateReq true  "Изменение счета"
 // @Success 200
 // @Failure 400
 // @Failure 500
 // @Router  /account/update/{user_id} [patch]
 func (h *Handler) UpdateBalance(w http.ResponseWriter, r *http.Request) {
 	userID := mux.Vars(r)["user_id"]
-	req := &updateAccountRequest{}
+	req := &updateReq{}
 	err := json.FromJSON(req, r.Body)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
@@ -36,5 +35,5 @@ func (h *Handler) UpdateBalance(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.WriteHeader(http.StatusOK)
+	//w.WriteHeader(http.StatusOK)
 }
